fixed link alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,7 @@ body {
   text-align: center
 }
 
-.main h2 {
+.main h2, a {
   color: Aquamarine;
   font-size: 16px;
   text-align: center
